server/ingress/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - dev.hotel.com
    secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: "dev.hotel.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hotel
            port:
              number: 8069
