server/ingress/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: "prod.hotel.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hotel
            port:
              number: 8069
