server/ingress/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - nur.com
    secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: "nur.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hotel
            port:
              number: 8069
